python/testData/highlighting/breakInFinallyBlock.py
while True:
  try:
    print("a")
  finally:
    <error descr="Python version 3.14 does not support 'break' inside 'finally' clause">break</error>